trying to fix menu cropped at the bottom for the address bar with webkit

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html,
 body {
   height: 100%;
   background-color: #ffbd5e;
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
 
 img,
@@ -42,7 +42,7 @@ svg {
     "footer";
   grid-template-rows: 0.7fr 10fr 1.3fr;
   height: 100vh;
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
   background-image: url("./assets/imgs/bgFondo.png");
   background-size: cover;
   background-position: center;
